fix dark mode color issue

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ input.right {
   }
   body {
     background-image: url(./img/deadVillage.jpeg);
-    @apply font-sans antialiased bg-cover bg-fixed bg-gray-50 dark:bg-gray-900 dark:text-white
+    @apply font-sans antialiased bg-cover bg-fixed bg-gray-50 bg-gray-900 text-white
   }
 }
 
